# beat-inflation-asset-allocation

./: README.md  main.py  pyproject.toml  utils.py
data/: jp_cpi.xlsx
